cmake_minimum_required(VERSION 3.28)
project(ProblemeOOP_Activitati_In_Timpul_Grevei)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProblemeOOP_Activitati_In_Timpul_Grevei main.cpp
        Profesor.h
        Profesor.cpp
        Teste.h
        Teste.cpp
        Repo.h
        Repo.cpp
        Service.h
        Service.cpp
        UI.h
        UI.cpp)
